--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DatabaseContext": "Server=tcp:vaja07dbsrvr.database.windows.net,1433;Initial Catalog=DB;Persist Security Info=False;User ID=is-admin;Password=VeryStrong123@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "AllowedHosts": "*"
 }
